# tencentcloud-speech-sdk-cpp

./: .gitignore  .xcheck-result.json  .xcheck-result.txt  CMakeHelpers.cmake  CMakeLists.txt  CMakeSettings.json  makefile  readme.md  xcheck-input.json
asr/: speech_recognizer.cpp  tcloud_public_request_build.cpp
asr/include/: speech_recognizer.h  unistd_win.h  websocket_handler.h
asr/include/pthread_win/: sched.h
common/: tcloud_util.cpp
common/include/: tcloud_util.h
examples/: asr_example.cpp  tts_example.cpp
lib/: libboost_chrono.so.1.53.0  libboost_chrono.so.1.74.0  libboost_date_time-vc142-mt-gd-x32-1_74.lib  libboost_date_time-vc142-mt-gd-x64-1_74.lib  libboost_random-vc142-mt-gd-x32-1_74.lib  libboost_random-vc142-mt-gd-x64-1_74.lib  libboost_random.so.1.53.0  libboost_random.so.1.74.0  libboost_system.so.1.53.0  libboost_system.so.1.74.0  libcrypto.so.1.1
tts/: speech_synthesizer.cpp  tcloud_public_request_build.cpp
tts/include/: speech_synthesizer.h  tcloud_public_request_builder.h
tts/include/pthread_win/: pthread.h
